--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="form-group">
                   <label for="phone">Phone</label>
-                  <input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" class="form-control">
+                  <input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" class="form-control" placeholder="###-###-####">
                 </div>
                 <div class="form-group">
                   <label for="password">Password</label>
