--- a/templates/partials/_confirm.html
+++ b/templates/partials/_confirm.html
@@ -12,6 +12,9 @@
           {% csrf_token %}
           <div class="form-group">
               <input id="delete_entry_id" type="hidden" name="id" value="0" class="form-control">
+              <input type="hidden" name="utp_approved" value="{{ user_period.approved }}">
+              <input type="hidden" name="utp_submitted" value="{{ user_period.submitted }}">
+
           </div>
 
           <p>
