Fixed grammar in timesheet dashboard.

--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -233,7 +233,7 @@ function getHoursBetweenDates(start, end) {
                   {% elif user_period.submitted and not user_period.approved %}
                   Submitted. You can make changes to your entries if your timesheet is not submitted.
                   {% elif user_period.submitted and user_period.approved %}
-                  Submitted and Approved.  You can make changes to your entries if your timesheet not approved nor submitted.
+                  Submitted and Approved.  You can make changes to your entries if your timesheet is not approved nor submitted.
                   {% else %}
                   Status is undetermined
                   {% endif %}
