--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load customtags %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -17,7 +16,10 @@
   <body>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <!--<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
@@ -30,9 +32,9 @@
 
    <!-- Footer -->
    {% include 'partials/_footer.html' %}
-   <script src="{% static 'js/jquery-3.3.1.min.js'  %}"></script>
-   <script src="{% static 'js/bootstrap.bundle.min.js'  %}"></script>
-   <script src="{% static 'js/main.js'  %}"></script>
+   <script type="javascript" src="{% static 'js/jquery-3.3.1.min.js'  %}"></script>
+   <script type="javascript" src="{% static 'js/bootstrap.bundle.min.js'  %}"></script>
+   <script type="javascript" src="{% static 'js/main.js'  %}"></script>
    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/js/bootstrapValidator.min.js"></script>
   </body>
 </html>
