--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -195,7 +195,7 @@ function getHoursBetweenDates(start, end) {
                     <td>{{ emp.date_time_in|date:'m-d-Y H:i' }}</td>
                     <td>{{ emp.date_time_out|date:'m-d-Y H:i' }}</td>
                     <td>{{ emp.duration }}</td>
-                    <td>{{ emp.user.hourly_rate | multiply:emp.duration }}</td>
+                    <td>{{ emp.hourly_rate | multiply:emp.duration }}</td>
                     <td><input type="checkbox" onclick="return false;" {% if emp.is_approved %} checked {% endif %}></td>
                     <td>{{ emp.notes}}</td>
                     <td style="visibility:hidden;">{{ emp.id }}</td>
