addition of purchasing code

--- a/templates/tsmanagement/managedashboard.html
+++ b/templates/tsmanagement/managedashboard.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} | User Dashboard {% endblock %}
+{% block title %} | Approval Dashboard {% endblock %}
 
 {% block content %}
 
