--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -41,21 +41,12 @@
                 <a class="nav-link" href="{% url 'dashboard' %}">
                     Welcome {{ user.username }} (Dashboard)</a>
               </li>
+              {% include 'partials/_navmenu.html' %}
               <li>
                 <a class="nav-link" href="https://docs.google.com/document/d/e/2PACX-1vQ2Tb5zj7r0k-rerYT3ocpP-tDxqLCWcAYPelDGmjKxlS06eAOupL0M3i1wQ092ZWITMjFzBDZNi1L8/pub" target="_blank">
                   HELP
                 </a>
               </li>
-
-              {% if perms.timesheets.approve_timesheetentry %}
-              <li>
-
-                <a class="nav-link" href="{% url 'managedashboard' %}">
-                  Approvals
-                </a>
-
-              </li>
-              {% endif %}
 
               <li class="nav-item mr-3">
                 <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
@@ -90,8 +81,11 @@
 
                     Login</a>
                 </li>
+
+
               {% endif %}
             </ul>
+
           </div>
         </div>
       </nav>
