--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -13,6 +13,7 @@
                 <i class="fas fa-sign-in-alt"></i> Login</h4>
             </div>
             <div class="card-body">
+              
               <!-- Alerts -->
               {% include 'partials/_alerts.html' %}
               <form action="{% url 'login' %}" method="POST">
@@ -26,8 +27,8 @@
                   <label for="password2">Password</label>
                   <input type="password" name="password" class="form-control" required>
                 </div>
-
                 <input type="submit" value="Login" class="btn btn-secondary btn-block">
+                <a href="{% url 'recover' %}">Forgot Username or Password</a>
               </form>
             </div>
           </div>
