--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -161,6 +161,16 @@ function getHoursBetweenDates(start, end) {
                           <label for="notes" class="col-form-label">Entry Notes</label>
                           <textarea id='notes' name="notes" rows="2" cols="80" class="form-control"></textarea>
                         </div>
+
+                        <div class="form-group">
+                          <label for="alternate_wage_code" class="col-form-label">Alternate Wage Code</label>
+                          <select id='alternate_wage_code' name="alternate_wage_code" class="form-control">
+                            <option value="0" selected=true>-----------</option>
+                            {% for code in alternate_wages %}
+                            <option value="{{ code.id }}">{{ code.description }}: {{ code.hourly_rate }}</option>
+                            {% endfor %}
+                          </select>
+                        </div>
                         <hr>
                         {% if not user_period.submitted and not user_period.approved %}
                         <input type="submit" value="Add" class="btn btn-block btn-secondary" id="submitBtn" name="addOrUpdateBtn">
@@ -195,7 +205,7 @@ function getHoursBetweenDates(start, end) {
                     <td>{{ emp.date_time_in|date:'m-d-Y H:i' }}</td>
                     <td>{{ emp.date_time_out|date:'m-d-Y H:i' }}</td>
                     <td>{{ emp.duration }}</td>
-                    <td>{{ emp.user.hourly_rate | multiply:emp.duration }}</td>
+                    <td>{{ emp.hourly_rate | multiply:emp.duration }}</td>
                     <td><input type="checkbox" onclick="return false;" {% if emp.is_approved %} checked {% endif %}></td>
                     <td>{{ emp.notes}}</td>
                     <td style="visibility:hidden;">{{ emp.id }}</td>
