--- a/templates/partials/_navmenu.html
+++ b/templates/partials/_navmenu.html
@@ -1,7 +1,7 @@
 {%  if user.is_authenticated %}
 <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Site Navigation
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
