fixed all templates to use bootstrap5 bs

--- a/templates/purchasing/dashboard.html
+++ b/templates/purchasing/dashboard.html
@@ -125,7 +125,7 @@ function getHoursBetweenDates(start, end) {
                   <div class="modal-content">
                     <div class="modal-header">
                       <h5 class="modal-title" id="inquiryModalLabel">Timesheet Entry</h5>
-                      <button type="button" class="close" data-dismiss="modal">
+                      <button type="button" class="close" data-bs-dismiss="modal">
                         <span>&times;</span>
                       </button>
                     </div>
