--- a/templates/partials/_alerts.html
+++ b/templates/partials/_alerts.html
@@ -3,7 +3,7 @@
     <div id="message" class="container">
         <div class="alert alert-{{ message.tags }} alert-dismissible text-centerfade show" role="alert">
 
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <button type="button" class="close" data-bs-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
                 </button>
                 <strong>
