--- a/templates/partials/_confirm.html
+++ b/templates/partials/_confirm.html
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="confirmModalLabel">Deletion Confirmation</h5>
-        <button type="button" class="close" data-dismiss="modal">
+        <button type="button" class="close" data-bs-dismiss="modal">
           <span>&times;</span>
         </button>
       </div>
