--- a/templates/purchasing/_companyfound.html
+++ b/templates/purchasing/_companyfound.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-  
+
 
 </script>
 <div class="modal fade" id="companyFoundModal" role="dialog">
@@ -7,7 +7,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="ModalLabel">Existing {{ company_type }}(s)</h5>
-        <button type="button" class="close" data-dismiss="modal">
+        <button type="button" class="close" data-bs-dismiss="modal">
           <span>&times;</span>
         </button>
       </div>
