--- a/templates/tsmanagement/managedashboard.html
+++ b/templates/tsmanagement/managedashboard.html
@@ -3,7 +3,7 @@
 {% block title %} | Approval Dashboard {% endblock %}
 
 {% block content %}
-
+{% load mathfilters %}
 <script type="text/javascript">
 function refreshWithNewPeriod() {
   window.location.href = window.location.href.split("?")[0] + "?period_id=" + document.getElementById("period_select").value
@@ -184,7 +184,7 @@ function getHoursBetweenDates(start, end) {
                           <td>{{ emp.date_time_in|date:'m-d-Y H:i' }}</td>
                           <td>{{ emp.date_time_out|date:'m-d-Y H:i' }}</td>
                           <td>{{ emp.duration }}</td>
-                          <td>{{ emp.user.hourly_rate | multiply:emp.duration }}</td>
+                          <td>{{ emp.user.hourly_rate | mul:emp.duration }}</td>
                           <td>{{ emp.notes}}</td>
                           <td style="visibility:hidden;"><input name="entry_id" value="{{ emp.id }}" type="hidden"</td>
                           <td style="visibility:hidden;">{{ emp.user.first_name}}</td>
