--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -204,7 +204,7 @@ function getHoursBetweenDates(start, end) {
                     <td>{{ emp.date_time_out|date:'m-d-Y H:i' }}</td>
                     <td>{{ emp.hourly_rate}}
                     <td>{{ emp.duration }}</td>
-                    <td>{{ emp.hourly_rate | mul:emp.duration }}</td>
+                    <td>{{ emp.hourly_rate | mul:emp.duration | floatformat:2 }}</td>
                     <td><input type="checkbox" onclick="return false;" {% if emp.is_approved %} checked {% endif %}></td>
                     <td>{{ emp.notes}}</td>
                     <td style="visibility:hidden;">{{ emp.id }}</td>
