--- a/templates/tsmanagement/managedashboard.html
+++ b/templates/tsmanagement/managedashboard.html
@@ -186,7 +186,7 @@ function getHoursBetweenDates(start, end) {
                           <td>{{ emp.date_time_out|date:'m-d-Y H:i' }}</td>
                           <td>{{ emp.hourly_rate }}</td>
                           <td>{{ emp.duration }}</td>
-                          <td>{{ emp.hourly_rate | mul:emp.duration }}</td>
+                          <td>{{ emp.hourly_rate | mul:emp.duration | floatformat:2 }}</td>
                           <td>{{ emp.notes}}</td>
                           <td style="visibility:hidden;"><input name="entry_id" value="{{ emp.id }}" type="hidden"</td>
                           <td style="visibility:hidden;">{{ emp.user.first_name}}</td>
