Fixed hamburger menu on navigation template.

--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -5,7 +5,7 @@
           <a class="navbar-brand" href="{% url 'index' %}">
             <b>{{ user.timesheetuser.organization.name }}</b>
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
             <span class="navbar-toggler-icon"></span>
           </button>
 
